--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "axios": "^1.6.7",
     "graphql": "^16.8.1"
   },
   "devDependencies": {
