--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "peerDependencies": {
     "@apollo/client": ">=3.8.0",
-    "next": ">=12.0.0",
+    "next": "^14.2.22",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
