--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "peerDependencies": {
     "@apollo/client": ">=3.8.0",
-    "next": "^14.2.22",
+    "graphql": ">=16.0.0",
+    "axios": ">=1.6.0",
+    "@fortawesome/fontawesome-svg-core": ">=1.2.36",
+    "@fortawesome/free-solid-svg-icons": ">=5.15.4",
+    "@fortawesome/react-fontawesome": ">=0.1.16",
+    "next": ">=14.0.0",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
@@ -30,14 +35,6 @@
     "next": {
       "optional": true
     }
-  },
-  "dependencies": {
-    "@apollo/client": "^3.8.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "axios": "^1.6.7",
-    "graphql": "^16.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
