--- a/package.json
+++ b/package.json
@@ -24,17 +24,17 @@
     "@fortawesome/fontawesome-svg-core": ">=1.2.36",
     "@fortawesome/free-solid-svg-icons": ">=5.15.4",
     "@fortawesome/react-fontawesome": ">=0.1.16",
-    "next": ">=14.0.0",
+    "next": ">=13.0.0 <15.0.0",
     "react": ">=17.0.0",
     "react-dom": ">=17.0.0"
   },
   "peerDependenciesMeta": {
-    "@apollo/client": {
-      "optional": true
-    },
     "next": {
       "optional": true
     }
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
