--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@fortawesome/fontawesome-svg-core": ">=1.2.36",
     "@fortawesome/free-solid-svg-icons": ">=5.15.4",
     "@fortawesome/react-fontawesome": ">=0.1.16",
-    "next": ">=13.0.0 <15.0.0",
-    "react": ">=17.0.0",
-    "react-dom": ">=17.0.0"
+    "next": ">=12.0.0 <15.0.0",
+    "react": ">=17.0.0 <20.0.0",
+    "react-dom": ">=17.0.0 <20.0.0"
   },
   "peerDependenciesMeta": {
     "next": {
