--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "axios": ">=1.6.0",
     "next": ">=12.0.0 <15.0.0",
     "react": ">=17.0.0 <20.0.0",
-    "react-dom": ">=17.0.0 <20.0.0"
+    "react-dom": ">=17.0.0 <20.0.0",
+    "rxjs": ">=7.0.0"
   },
   "peerDependenciesMeta": {
     "next": {
