--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.2",
   "description": "A dynamic form component with conditional logic, multiple question types, and multi-language support",
   "type": "module",
-  "main": "src/index.js",
-  "module": "src/index.js",
-  "types": "src/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
   "files": [
-    "src",
+    "dist",
     "README.md"
   ],
   "scripts": {
