--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
   },
   "peerDependencies": {
-    "@apollo/client": ">=4.0.0",
+    "@apollo/client": ">=3.0.0 <5.0.0",
     "graphql": ">=16.0.0",
     "axios": ">=1.6.0",
     "next": ">=12.0.0 <15.0.0",
